--- a/css/main.css
+++ b/css/main.css
@@ -21,10 +21,10 @@ a {
 
 #home header {    
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
 
-    width: 430px;
+    max-width: 430px;
     margin: 50px auto;
 }
 
@@ -54,21 +54,22 @@ a {
 }
 
 #home .controls {
-    margin-top: 80px;
+    margin-top: 3rem;
 
     display: flex;
     justify-content: space-evenly;
     text-align: center;
+    gap: 16px;
 }
 
 #home .controls #button {
     color: white;
     font-size: 18px;
     font-weight: bold;
-    line-height: 21px;
 
-    width: 180px;
+    width: 15em;
     height: 50px;
+    max-width: 15rem;
     text-align: center;
     padding: 14px;
     border-radius: 8px;
@@ -106,7 +107,8 @@ a {
 }
 
 #home form {
-    width: 70%;    
+    width: 90%;
+    max-width: 1100px;
     margin: 0 auto;
 }
 #home form legend {
@@ -118,39 +120,61 @@ a {
     margin-top: 18px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    gap: 12px;
+    justify-content: space-evenly;
+    gap: 16px;
 }
 
 #home form label {
     font-size: 16px;
-    display: block;
 }
 
 #home form input {
-    margin-top: 10px;
-
+    margin-top: 0.5em;
     font-size: 20px;
     color: #cacaca;
     text-align: center;
 
     border: solid 1px #cacaca;
     background-color: #f5f5f0;
-    width: 180px;
-    height: 40px;
-    border-radius: 8px;
-    padding: 10px;
+    width: 100%;
+    height: 2em;
+    border-radius: 0.5em;
 }
 
 #home form #submit {
     color: #f5f5f0;
-    display: flex;
     background-color: #D61D1D;
-    margin-top: 20px;
-    display: inline;
+    margin-top: 1.5em;
+    max-width: 40%
 }
 
 #home form #saved-settings {
-    margin-left: 5%;
-    font-size: 18px;
+    font-size: 1em;
+    margin: 5% 0 0 5%;
+    display: inline-block;
+}
+
+
+/* Ajustes*/
+
+@media (min-width: 600px){
+
+}
+
+@media (max-width: 600px) {
+    #home header {
+        max-width: 100%;
+    }
+}
+@media (max-width: 460px) {
+    
+    #home header {
+        margin: 2em auto;
+    }
+
+    #home header h1 {
+        font-size: 2em;
+        
+    }
+    
 }
