--- a/css/main.css
+++ b/css/main.css
@@ -131,7 +131,7 @@ a {
 #home form input {
     margin-top: 0.5em;
     font-size: 20px;
-    color: #cacaca;
+    color: #000000;
     text-align: center;
 
     border: solid 1px #cacaca;
@@ -145,7 +145,12 @@ a {
     color: #f5f5f0;
     background-color: #D61D1D;
     margin-top: 1.5em;
-    max-width: 40%
+    max-width: 20rem;
+}
+
+#home form #submit:disabled {
+    background-color: #f5f5f0;
+    color: #cacaca;
 }
 
 #home form #saved-settings {
